feat(package): 添加NuGet包的元数据和资源
- 在`Huskui.Avalonia.csproj`中添加NuGet包的基本信息和描述
- 包含图标文件`icon.png`用于NuGet打包
- 添加`Microsoft.SourceLink.GitHub`引用以支持调试
- 更新`Huskui.Gallery.csproj`中的项目引用路径
- 更新解决方案文件`Huskui.sln`以适应新的项目结构

--- a/samples/Huskui.Gallery/Huskui.Gallery.csproj
+++ b/samples/Huskui.Gallery/Huskui.Gallery.csproj
@@ -20,6 +20,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Huskui.Avalonia\Huskui.Avalonia.csproj"/>
+        <ProjectReference Include="..\..\src\Huskui.Avalonia\Huskui.Avalonia.csproj"/>
     </ItemGroup>
 </Project>
