chore(project): 更新项目文件以包含 README.md
- 在项目文件中添加对 `..\..\README.md` 的引用，以便在 NuGet 打包时包含 README 文件
- 移除一些行尾多余的空格，以保持代码整洁
- 保持 `PackageReference` 和 `Folder` 的格式一致性，移除多余空格

--- a/src/Huskui.Avalonia/Huskui.Avalonia.csproj
+++ b/src/Huskui.Avalonia/Huskui.Avalonia.csproj
@@ -39,14 +39,15 @@
 
     <!-- Include files needed for NuGet packaging -->
     <ItemGroup>
-        <None Include="Assets\icon.png" Pack="true" PackagePath="\" Condition="Exists('Assets\icon.png')" />
+        <None Include="Assets\icon.png" Pack="true" PackagePath="\" Condition="Exists('Assets\icon.png')"/>
+        <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
     <!-- Source Link for better debugging experience -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Assets\" />
+        <Folder Include="Assets\"/>
     </ItemGroup>
 </Project>
