feat(theme): 添加新的中性色调支持
- 在`HuskuiTheme.axaml`中引入了新的中性色调资源文件`Colors.Accent.Neutral.axaml`
- 新增`AccentColor`枚举以支持不同的颜色选项
- 更新`HuskuiTheme`类以支持动态更改主题色调
- 修改`Colors.axaml`以移除不必要的颜色引用并添加新的前景色定义

--- a/src/Huskui.Avalonia/Huskui.Avalonia.csproj
+++ b/src/Huskui.Avalonia/Huskui.Avalonia.csproj
@@ -9,7 +9,7 @@
 
         <!-- NuGet Package Metadata -->
         <PackageId>Huskui.Avalonia</PackageId>
-        <Version>0.2.2</Version>
+        <Version>0.3.0</Version>
         <Authors>d3ara1n</Authors>
         <Company>d3ara1n</Company>
         <Product>Huskui.Avalonia</Product>
@@ -25,10 +25,11 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Title>Huskui.Avalonia</Title>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.3.1"/>
+        <PackageReference Include="Avalonia" Version="11.3.0"/>
         <PackageReference Include="FluentIcons.Avalonia" Version="1.1.302"/>
     </ItemGroup>
 
