refactor: 移动控件页面到正确的目录
- 将控件相关的页面从 `Views/Input` 移动到 `Views/Controls` 目录
- 将容器相关的页面从 `Views/Controls` 移动到 `Views/Containers` 目录
- 更新了命名空间以匹配新的目录结构
- 更新了 `Huskui.Gallery.csproj` 文件以反映文件移动和命名空间更改
- 修复了卡片页面中的一些UI问题，包括内边距和间距。

--- a/src/Huskui.Gallery/Huskui.Gallery.csproj
+++ b/src/Huskui.Gallery/Huskui.Gallery.csproj
@@ -35,4 +35,35 @@
     <ItemGroup>
         <AvaloniaResource Include="Assets\**"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="Views\Controls\ButtonsPage.axaml.cs">
+            <DependentUpon>ButtonsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Controls\DropDownButtonsPage.axaml.cs">
+            <DependentUpon>DropDownButtonsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Controls\HyperlinkButtonsPage.axaml.cs">
+            <DependentUpon>HyperlinkButtonsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Controls\RadioButtonsPage.axaml.cs">
+            <DependentUpon>RadioButtonsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Containers\BusyContainersPage.axaml.cs">
+            <DependentUpon>BusyContainersPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Containers\SkeletonContainersPage.axaml.cs">
+            <DependentUpon>SkeletonContainersPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Containers\CardsPage.axaml.cs">
+            <DependentUpon>CardsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+    </ItemGroup>
 </Project>
