feat(gallery): 添加应用图标
- 为 `Huskui.Gallery` 项目添加了应用图标 `Assets\Icon.ico`。
- 使得应用程序在操作系统中拥有更友好的视觉呈现。

--- a/src/Huskui.Gallery/Huskui.Gallery.csproj
+++ b/src/Huskui.Gallery/Huskui.Gallery.csproj
@@ -9,6 +9,7 @@
         <LangVersion>preview</LangVersion>
         <AssemblyTitle>Huskui Gallery</AssemblyTitle>
         <AssemblyDescription>A comprehensive gallery showcasing Huskui.Avalonia controls</AssemblyDescription>
+        <ApplicationIcon>Assets\Icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
