--- a/src/Huskui.Gallery/Huskui.Gallery.csproj
+++ b/src/Huskui.Gallery/Huskui.Gallery.csproj
@@ -33,45 +33,21 @@
         <ProjectReference Include="..\Huskui.Avalonia\Huskui.Avalonia.csproj"/>
     </ItemGroup>
 
-    <ItemGroup>
+        <ItemGroup>
         <AvaloniaResource Include="Assets\**"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Update="Views\Controls\ButtonsPage.axaml.cs">
-            <DependentUpon>ButtonsPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="Views\Controls\DropDownButtonsPage.axaml.cs">
-            <DependentUpon>DropDownButtonsPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="Views\Controls\HyperlinkButtonsPage.axaml.cs">
-            <DependentUpon>HyperlinkButtonsPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="Views\Controls\RadioButtonsPage.axaml.cs">
-            <DependentUpon>RadioButtonsPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="Views\Containers\BusyContainersPage.axaml.cs">
-            <DependentUpon>BusyContainersPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="Views\Containers\SkeletonContainersPage.axaml.cs">
-            <DependentUpon>SkeletonContainersPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-                <Compile Update="Views\Containers\CardsPage.axaml.cs">
-            <DependentUpon>CardsPage.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-                <Compile Update="Views\Containers\TabControlsPage.axaml.cs">
+        <Compile Update="Views\Containers\TabControlsPage.axaml.cs">
             <DependentUpon>TabControlsPage.axaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
         <Compile Update="Views\Overlays\FlyoutsPage.axaml.cs">
             <DependentUpon>FlyoutsPage.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="Views\Overlays\ToolTipsPage.axaml.cs">
+            <DependentUpon>ToolTipsPage.axaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
     </ItemGroup>
